<resources>
    <string name="app_name">My Hitchhiking Spots</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="accuracy_label">Accuracy</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="save_spot_button_text">New spot</string>
    <string name="got_a_ride_button_text">Got a ride</string>
    <string name="arrived_button_text">Arrived to destination</string>
    <string name="break_button_text">Take a break</string>
    <string name="evaluate_running_spot_required">You must select \"%1$s\" or \"%2$s\" before you create/edit another spot.</string>
    <string name="location_updated_message">Location updated</string>
    <string name="update_location_switch">Get my current location</string>
    <string name="hitchability">Hitchability</string>
    <string name="hitchability_unknown">Unknown</string>
    <string name="hitchability_very_good">Very Good</string>
    <string name="hitchability_good">Good</string>
    <string name="hitchability_average">Average</string>
    <string name="hitchability_bad">Bad</string>
    <string name="hitchability_senseless">Senseless</string>
    <string name="hitchability_no_answer">No Answer</string>
    <string name="attempt_result">Attempt Result</string>
    <string name="attempt_result_unknown" translatable="false">@string/hitchability_unknown</string>
    <string name="attempt_result_successful" translatable="false">@string/got_a_ride_button_text</string>
    <string name="attempt_result_gave_up" translatable="false">@string/break_button_text</string>
    <string-array name="startup_fragment_options" translatable="false">
        <item>@string/menu_dashboard</item>
        <item>@string/menu_my_maps</item>
        <item>@string/menu_hitchwiki_maps</item>
    </string-array>
    <string name="tools_tips_title">TIPS</string>
    <string name="tools_warning">Welcome to our Tools! Please note that we still do not synchronize your hitchhiking spots to anywhere. Meanwhile here are some tools you can get around with for now.</string>
    <string name="tools_tips_description">If you want to share your saved spots to your friends or if you just want to have your spots backed up we strongly recommend using our \"%1$s\" option. Exporting your database will save a light copy of your spots data on your phone\'s storage, and you can then share it with friends, or even save it somewhere safer, like on your e-mail or favorite cloud service. To restore a exported database, use our \"%2$s\" option.</string>
    <string name="tools_database_exported_successfully_message">Database exported successfully</string>
    <string name="tools_exportdb_share_dialog_message">We recommend saving this copy of your database somewhere else.\nClick \"%s\" and pick your favorite option. You might want to save your database to you cloud service, send it to yourself (or perhaps to a friend) over e-mail, and so on! :-)</string>
    <string name="tools_file_dialog_select_directory_title">Select directory</string>
    <string name="settings_importdb_button_label">Import database</string>
    <string name="settings_exportdb_button_label">Export and share</string>
    <string name="settings_sharedb_button_label">Share database</string>
    <string name="settings_exporting_db_message">Your spots list will be saved on your phone as CSV file..</string>
    <string name="settings_exportdb_finish_successfull_message">Copied to:\n%s</string>
    <string name="settings_last_export_message">Last export was done %s ago.</string>
    <string name="settings_import_total_spots_on_selected_file">There were %d spots on the selected CSV file.</string>
    <string name="settings_import_total_not_imported">%d could not be imported.</string>
    <string name="settings_import_total_spots_skipped">%d already existed and were skipped.</string>
    <string name="settings_import_total_successfuly_imported">%s were imported.</string>
    <string name="settings_import_happening_message">Importing hitchhiking spots from CSV file..</string>
    <string name="settings_fixing_date_message">Datetimes getting fixed..</string>
    <string name="settings_automatically_fix_spots_datetime_title">We can fix the datetimes</string>
    <string name="settings_automatically_fix_spots_datetime_message">We realized that the date and time of spots saved with My Hitchhiking Spots v2.2.5 (or prior) have not been saved properly. The file being imported seem to have been generated before version 2.2.5. Would you like us to automatically fix the dates and times of the spots being imported?</string>
    <string name="settings_preferences_label">Preferences</string>
    <string name="settings_preferences_description">What option would you like to see first\nwhen you open the app?</string>
    <string name="hwmaps_downloadHDSpots_button_label">Download spots from Hitchwiki Maps</string>
    <string name="hwmaps_select_continents_button_label">Select continents</string>
    <string name="hwmaps_select_countries_button_label">Select countries</string>
    <string name="hwmaps_downloadCountriesList_button_label">Downloading countries list</string>
    <string name="hwmaps_countriesList_is_empty_title">Countries list not downloaded</string>
    <string name="hwmaps_countriesList_is_empty_message">Once the country options are downloaded, you\'ll be able to download spots from Hitchwiki Maps for the countries of your preference. This means just a small part of your phone memory will be used. :-)\nWould you like to download the countries list now?</string>
    <string name="hwmaps_countriesList_download_failed_message">An exception occurred while trying to download the countries list.\n"%s"</string>
    <string name="hwmaps_hitchwikiMapsSpots_download_failed_message">An exception occurred while trying to download hitchhiking spots from Hitchwiki Maps.\n"%s"</string>
    <string name="hwmaps_last_countriesList_update_message">Last update of countries list was done %s ago.</string>
    <string name="hwmaps_last_download_message">Last download was done %s ago.</string>
    <string name="hwmaps_spotslist_cleared_title">Hitchwiki Maps cleared</string>
    <string name="hwmaps_spotslist_cleared_message">All spots previously downloaded from Hitchwiki Maps were deleted from your device. To download spots, select one or more countries.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spot_form_note_hint">Comment</string>
    <string name="spot_form_add_note_hint">Add a comment</string>
    <string name="spot_form_date_label">Date</string>
    <string name="spot_form_time_label">Time</string>
    <string name="spot_form_waiting_time_label">Waiting time</string>
    <string name="spot_form_more_options_label">When</string>
    <string name="spot_form_more_options_edit_label">(edit)</string>
    <string name="spot_form_comments_title">Comments by other hitchhikers</string>
    <string name="spot_form_comments_empty_list">Nobody made comments about this spot yet</string>
    <string name="spot_form_unable_to_download_details">You may click on \"%s\" tab to see more details about this spot, but we\'re unable to download further information while your device doesn\'t have a internet connection.</string>
    <string name="spot_form_user_location_permission_not_granted">Your location is unknown.</string>
    <string name="spot_form_not_allowed_to_edit">Unable to edit this spot. It seems like you\'re waiting for a ride at another spot.</string>
    <string name="spot_form_read_comments_showCase">Click here to read what other hitchhikers have commented about this spot.</string>
    <string name="spot_form_extra_options_showCase">Want to add a different spot on your route?\nDon\'t forget you may swipe up and find some extra options here! :-)</string>
    <string name="menu_dashboard">Statistics</string>
    <string name="menu_my_maps">My Maps</string>
    <string name="menu_hitchwiki_maps">Hitchwiki Maps</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_offline_maps">Offline Maps</string>
    <string name="menu_about_us">About Us</string>
    <string name="action_settings">Settings</string>
    <string name="spot_saved_successfuly">Spot saved</string>
    <string name="spot_deleted_successfuly">Spot deleted</string>
    <string name="confirm_back_button_click_dialog_title">Navigate back</string>
    <string name="confirm_back_button_click_dialog_message">Are you sure you want to leave this page without saving your changes?</string>
    <string name="view_map_button_label">Map</string>
    <string name="view_list_button_label">list</string>
    <string name="main_activity_title">My Spots</string>
    <string name="main_activity_you_tab">you</string>
    <string name="main_activity_list_tab">routes</string>
    <string name="main_activity_single_spots_list_tab">spots</string>
    <string name="spot_list_item_arrival_label">arrival</string>
    <string name="spot_list_item_waiting_label">waiting</string>
    <string name="spot_form_save_button_text">save</string>
    <string name="spot_form_delete_button_text">delete</string>
    <string name="spot_form_view_comments_button_label">view (%s) comments</string>
    <string name="spot_form_delete_dialog_title_text">Delete spot</string>
    <string name="spot_form_delete_dialog_message_text">Are you sure you want to permanently delete this spot?</string>
    <string name="spot_form_delete_dialog_message_for_many_text">%d spots selected. Are you sure you want to delete those spots? You won\'t be able to recover them.</string>
    <string name="spot_form_delete_dialog_yes_for_many_option">Delete %d spots</string>
    <string name="spot_form_delete_dialog_no_option">Cancel</string>
    <string name="spot_form_delete_dialog_yes_option">Delete</string>
    <string name="spot_form_is_part_of_a_route_checkbox_text">This spot belongs to a route</string>
    <string name="spot_form_is_destination_checkbox_text">This is my route\'s destination</string>
    <string name="spot_form_is_hitchhiking_spot_checkbox_text">This is a hitchhiking spot</string>
    <string name="spot_form_is_not_hitchhiked_from_here_checkbox_text">From here I moved non-hitchhiking</string>
    <string name="spot_form_title_evaluate">Evaluate spot</string>
    <string name="spot_form_title_edit">Edit spot</string>
    <string name="spot_form_lat_lng_label">Lat %1$s Lng %2$s</string>
    <string name="spot_form_location_selected_label">Location selected.</string>
    <string name="spot_form_enable_evaluate_tab_message">Save your hitchhiking spot to enable the %s tab.</string>
    <string name="waiting_for_connection">Waiting connection to be established..</string>
    <string name="general_edit_list">Edit list</string>
    <string name="general_toggle_buttons_label">Toggle buttons</string>
    <string name="general_filter_by_date_label">Filter by date</string>
    <string name="general_zoom_to_fit_all">View all spots</string>
    <string name="general_zoom_in_button_label">Zoom in</string>
    <string name="general_zoom_out_button_label">Zoom out</string>
    <string name="general_locate_button_label">Move to your location</string>
    <string name="general_select_all">Select all</string>
    <string name="login_type_credentials_text">Type in the same credentials you use on Hitchwiki.org</string>
    <string name="login_username_field_label">Username:</string>
    <string name="login_password_field_label">Password:</string>
    <string name="login_create_an_account">Create an account</string>
    <string name="settings_export_section_title">Export</string>
    <string name="settings_import_section_title">Import</string>
    <string name="download_region_button_text">Download this region</string>
</resources>