<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_new_spot"
        android:title="@string/save_spot_button_text"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_new_black_24dp" />
    <item android:id="@+id/action_view_list"
        android:title="@string/main_activity_list_tab"
        android:icon="@drawable/ic_list_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_zoom_to_fit_all"
        android:title="@string/general_zoom_to_fit_all"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_toggle_icons"
        android:title="@string/general_toggle_buttons_label"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_filter_by_date"
        android:title="@string/general_filter_by_date_label"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
