<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_my_maps" />
        <item
            android:id="@+id/nav_hitchwiki_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_hitchwiki_maps" />
        <item
            android:id="@+id/nav_offline_map"
            android:icon="@drawable/ic_get_app_24dp"
            android:title="@string/menu_offline_maps" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_unselect"
            android:title=""
            android:visible="false"/>
    </group>

</menu>
